# tmdl-preflight

./: CONTRIBUTING.md  MARKETING.md  README.md  RELEASE-NOTES.md  pyproject.toml
docs/explanation/: README.md  bidirectional-and-orphan-tables.md  bookmark-integer-types.md  bookmark-visual-references.md  column-data-types.md  dax-delimiter-balance.md  duplicate-lineage-tags.md  duplicate-measure-names.md  field-parameter-comma-runs.md  format-strings.md  imposition-pattern.md  layered-testing.md  nameof-reference-integrity.md  relationship-integrity.md  tmdl-well-formedness.md
docs/how-to/: add-a-custom-rule.md  run-in-ci.md  run-in-pytest.md  run-only-autofixable-rules.md
docs/reference/: cli.md  rules.md
docs/tutorials/: getting-started.md
examples/: README.md
examples/bike-shop-broken/: BikeShop.pbip
examples/bike-shop-broken/BikeShop.Report/: .platform
examples/bike-shop-broken/BikeShop.SemanticModel/definition/: model.tmdl  relationships.tmdl
examples/bike-shop-clean/BikeShop.Report/: definition.pbir  report.json
examples/bike-shop-clean/BikeShop.SemanticModel/: .platform
src/tmdl_preflight/: __init__.py  cli.py  dax.py  engine.py  model.py  parser.py  pytest_plugin.py
src/tmdl_preflight/rules/: __init__.py  base.py  dax_rules.py  field_parameters.py  relationships.py  report.py  structural.py  style.py
tests/: conftest.py  test_cli.py  test_dax.py  test_engine.py  test_parser.py  test_pytest_plugin.py  test_rules_dax.py  test_rules_field_parameters.py  test_rules_relationships.py  test_rules_report.py  test_rules_structural.py  test_rules_style.py
(+26 files in other folders)
