[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmdl-preflight"
version = "0.1.0"
description = "Preflight checks and auto-fixes for Power BI semantic models saved in TMDL format (PBIP folders)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Christoforos Kapsalis" }]
requires-python = ">=3.10"
keywords = ["power-bi", "tmdl", "pbip", "semantic-model", "lint", "dax", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Documentation = "https://github.com/c-kapsalis/tmdl-preflight/tree/main/docs"
Source = "https://github.com/c-kapsalis/tmdl-preflight"

[project.scripts]
tmdl-preflight = "tmdl_preflight.cli:main"

[project.entry-points.pytest11]
tmdl_preflight = "tmdl_preflight.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/tmdl_preflight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
